--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
    </footer>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>    
 <script>
-    
+    contenedorDeResultados.style.visibility = 'hidden';
     function calcular(){
         let select  = document.getElementById("descuento");
         let select_activa = select.options[select.selectedIndex].value;
