--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
                         <button class="btn btn-primary" type="reset" id="botonBorrar" onclick="botonReset();">Borrar</button>
                     </div>
                     <div class="col-xl-6 d-grid gap-2 my-3">
-                        <button class="btn btn-primary" type="submit" id="botonResumen" onclick="calcular();">Resumen</button>
+                        <button class="btn btn-primary" type="button" id="botonResumen" onclick="calcular();">Resumen</button>
                     </div>
                 </div>
             </form>
